# HMI

./: CMakeLists.txt  CMakeLists.txt.user.2b6634c  CMakeLists.txt.user.bddd8b4  main.cpp  res.qrc
Buttons/: PrefsButton.qml  TabButton.qml
Components/: AirControl.qml  BatteryTile.qml  CabinTempControl.qml  DateTimeTile.qml  KeyBoardTile.qml  LiveLocationModel.qml  LiveWeatherModel.qml  MapTile.qml  MusicTile.qml  NotificationTile.qml  PowerControl.qml  Requester.qml  SummaryTile.qml
Screens/: CabinScreen.qml  CallScreen.qml  HomeScreen.qml  MusicScreen.qml  NavigationScreen.qml  SettingsScreen.qml  VehicleScreen.qml
